recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:4: error: missing parameter type
    case_ =>  current(steps);avance(length);droite(angle);
    ^